# coffeegames

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .lfsconfig  .prettierignore  .prettierrc.yml  .project  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  flake.nix  format_test.sh  pom.xml  rules_closure_roots_fix.patch  update_poms.sh
engines/voide/: .project  BUILD.bazel  README.md  pom.xml  pom.xml.template  template-pom.xml
engines/voide/src/buffer/: BUILD  BufferUtils.java
engines/voide/src/collision/: BUILD.bazel  HitShape.java
engines/voide/src/graphics/geometry/: BUILD.bazel  InstancedQuad.java  Quad.java
engines/voide/src/input/: BUILD.bazel  Key.java
engines/voide/src/java/voide/buffer/: BufferUtils.java
engines/voide/src/java/voide/collision/: BUILD.bazel  HitPoint.java  HitShape.java
engines/voide/src/java/voide/debug/: Representable.java  RepresentationBuilder.java
engines/voide/src/java/voide/entity/: BUILD.bazel  Component.java  ComponentType.java  Entity.java  EntityIndustry.java  EntityStream.java  EntityType.java  Storage.java
engines/voide/src/java/voide/input/: BUILD.bazel  Key.java  KeyConfiguration.java  KeyState.java  Keyboard.java  MouseWrapper.java
engines/voide/src/java/voide/io/: FileReader.java
engines/voide/src/java/voide/logger/: LogResult.java  Logger.java
engines/voide/src/java/voide/math/: Axis.java  BUILD.bazel  LineSegment.java  MatrixMaker.java  Projection.java  VectorD.java
engines/voide/src/java/voide/random/: BUILD.bazel  RandomTexture.java  VoideRandom.java
engines/voide/src/java/voide/render/: BUILD.bazel  MasterRenderer.java  RenderJob.java
engines/voide/src/java/voide/resources/: BUILD.bazel  ClassMixin.java  Loader.java  Main.java  Resource.java  ResourceFile.java  ResourceNamespace.java  ResourceProxy.java  Resources.java
engines/voide/src/java/voide/sound/: BUILD.bazel  Effect.java  Music.java  Sound.java
engines/voide/src/java/voide/ui/: BUILD.bazel  UI.java
engines/voide/src/math/: Axis.java  BUILD.bazel  LineSegment.java  MatrixD.java  VectorD.java
engines/voide/src/sound/: BUILD.bazel  Effect.java  Music.java  Sound.java
engines/voide/test/java/voide/debug/: BUILD.bazel  (+1 more)
games/spaxel/resources/java/: BUILD  BUILD.bazel  load_resource_map.yml  load_resource_paths.yml  resource_map.yml  resource_paths.yml
games/spaxel/resources/java/keys/: BUILD.bazel  default.yml
games/spaxel/resources/java/loading/: BUILD  BUILD.bazel  animation.json  sprite.json  spritesheet.json
games/spaxel/resources/java/music/: BUILD.bazel
games/spaxel/resources/java/properties/: BUILD  BUILD.bazel  animation.json
games/spaxel/resources/java/resources/: BUILD.bazel  hitshape.json  itemProperties.json  sound.json
games/spaxel/resources/java/shaders/: 2Dsprite.frag  BUILD.bazel  blur_pass.frag  blur_pass.vert  last_pass.frag  last_pass.vert
games/spaxel/resources/java/spritesheets/: BUILD.bazel
games/spaxel/resources/java/textures/: BUILD  BUILD.bazel
games/spaxel/resources/java/ui/: BUILD  BUILD.bazel  class_selection.xml  credits.xml  game_over.xml  load.xml  main.xml  options.xml  play.xml
games/spaxel/src/: BUILD  BUILD.bazel  Constants.java  DisplayRunner.java  Game.java  UpdateRunner.java
games/spaxel/src/collision/: BUILD  HitPoint.java  HitShape.java
games/spaxel/src/engine/: BUILD  BUILD.bazel  Engine.java  GameState.java  Rarety.java  Resources.java
games/spaxel/src/entity/: BUILD  BUILD.bazel  Behaviour.java  Component.java  Storage.java
games/spaxel/src/factories/elements/: BUILD  ElementCreator.java
games/spaxel/src/factories/entities/: BUILD.bazel  EffectIndustry.java  EntityIndustry.java  ItemIndustry.java  PlayerIndustry.java  RandomParticleIndustry.java  SpawnerIndustry.java
games/spaxel/src/graphics/: MasterRenderer.java
games/spaxel/src/graphics/animation/: Animation.java  Animator.java  BUILD  YScaleAnimator.java
games/spaxel/src/graphics/buffer/: BUILD  BUILD.bazel  LayerFBO.java  MasterBuffer.java  RenderBuffer.java  RenderJob.java  RenderLayer.java
games/spaxel/src/graphics/geometry/: BUILD  InstancedQuad.java  Quad.java
games/spaxel/src/graphics/postprocess/: BUILD  BUILD.bazel  BlurPostProcessor.java  PostProcessor.java
games/spaxel/src/graphics/shaders/: BUILD  BUILD.bazel  BlurShaderProgram.java  InstancedShaderProgram.java  LastPassShaderProgram.java  ShaderProgram.java
games/spaxel/src/graphics/texture/: BUILD  BUILD.bazel  ColorBox.java  PackedTexture.java  Renderable.java  Texture.java  TextureNode.java  TexturePart.java
games/spaxel/src/input/: BUILD  BUILD.bazel  Key.java  KeyState.java  Keyboard.java  MouseWrapper.java
games/spaxel/src/java/spaxel/: BUILD.bazel  Constants.java  DisplayRunner.java  Game.java  UpdateRunner.java
games/spaxel/src/loaders/: BUILD  BUILD.bazel  Loader.java
games/spaxel/src/logger/: BUILD  LogResult.java  Logger.java
games/spaxel/src/main/resources/: BUILD.bazel  load_resource_map.yml  resource_paths.yml
games/spaxel/src/math/: Axis.java  BUILD  LineSegment.java  MatrixD.java  Projection.java  VectorD.java
games/spaxel/src/sound/: BUILD  BUILD.bazel  Effect.java  Music.java  MusicList.java  Sound.java
games/spaxel/src/system/: AISystem.java  BUILD.bazel  CooldownSystem.java  DamageSystem.java  DifficultySystem.java  ExperienceSystem.java  GameSystem.java  HealthSystem.java  HitSystem.java  KeyboardSystem.java  RenderSystem.java  SoundSystem.java  SystemType.java  UISystem.java  VelocitySystem.java
games/spaxel/src/ui/controllers/: ClassSelectionController.java  CreditsController.java  OptionsController.java  PlayController.java
games/spaxel/src/ui/elements/: BUILD  BUILD.bazel  Element.java  UI.java  UIType.java
games/spaxel/src/ui/render/: BUILD  BUILD.bazel  StyleRenderer.java  TextRenderer.java
games/spaxel/src/ui/state/: BUILD.bazel  State.java
games/spaxel/src/ui/styles/: BUILD  Style.java
games/spaxel/src/util/: BUILD  BUILD.bazel  BufferUtils.java  DebugRenderer.java  FileToStringLoader.java  MatrixUtil.java  SpriteDataUtil.java  TextureUtil.java
(+564 files in other folders)
