load("//bazel/build:defs.bzl", "oregano")

oregano(
    name = "oregano",
    autoupdate = True,
    deps = [
        "//engines/voide/src/java/voide/buffer:buffer_utils.checkstyle.rgno",
        "//engines/voide/src/java/voide/collision:collision.checkstyle.rgno",
        "//engines/voide/src/java/voide/math:math.checkstyle.rgno",
        "//engines/voide/src/java/voide/sound:sound.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel:constants.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/input:input.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/logger:logger.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:file_to_string_loader.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:gl_util.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:matrix_util.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:shader_utils.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:spaxel_random.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:sprite_data_util.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:texture_util.checkstyle.rgno",
    ],
)
