load("//bazel/build:defs.bzl", "oregano")

oregano(
    name = "oregano",
    autoupdate = True,
    deps = [
        "//engines/voide/src/java/voide/buffer:buffer_utils.checkstyle.rgno",
        "//engines/voide/src/java/voide/collision:collision.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/animation:animation.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/geometry:geometry.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/load:load.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/renderable:renderable.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/util:image_pack.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/util:texture_util.checkstyle.rgno",
        "//engines/voide/src/java/voide/input:input.checkstyle.rgno",
        "//engines/voide/src/java/voide/io:io.checkstyle.rgno",
        "//engines/voide/src/java/voide/math:math.checkstyle.rgno",
        "//engines/voide/src/java/voide/render:render.checkstyle.rgno",
        "//engines/voide/src/java/voide/render/buffer:buffer.checkstyle.rgno",
        "//engines/voide/src/java/voide/render/postprocess:postprocess.checkstyle.rgno",
        "//engines/voide/src/java/voide/render/shaders:shaders.checkstyle.rgno",
        "//engines/voide/src/java/voide/resources:resources.checkstyle.rgno",
        "//engines/voide/src/java/voide/sound:sound.checkstyle.rgno",
    ],
)
