load("//bazel/build:defs.bzl", "oregano")

oregano(
    name = "oregano",
    autoupdate = True,
    deps = [
        "//engines/voide/src/java/voide/buffer:buffer_utils.checkstyle.rgno",
        "//engines/voide/src/java/voide/collision:collision.checkstyle.rgno",
        "//engines/voide/src/java/voide/entity:entity.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/animation:animation.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/geometry:geometry.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/load:load.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/renderable:renderable.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/util:image_pack.checkstyle.rgno",
        "//engines/voide/src/java/voide/graphics/util:texture_util.checkstyle.rgno",
        "//engines/voide/src/java/voide/input:input.checkstyle.rgno",
        "//engines/voide/src/java/voide/io:io.checkstyle.rgno",
        "//engines/voide/src/java/voide/logger:logger.checkstyle.rgno",
        "//engines/voide/src/java/voide/math:math.checkstyle.rgno",
        "//engines/voide/src/java/voide/random:random.checkstyle.rgno",
        "//engines/voide/src/java/voide/render:render.checkstyle.rgno",
        "//engines/voide/src/java/voide/render/buffer:buffer.checkstyle.rgno",
        "//engines/voide/src/java/voide/render/postprocess:postprocess.checkstyle.rgno",
        "//engines/voide/src/java/voide/render/shaders:shaders.checkstyle.rgno",
        "//engines/voide/src/java/voide/resources:resources.checkstyle.rgno",
        "//engines/voide/src/java/voide/sound:sound.checkstyle.rgno",
        "//engines/voide/src/java/voide/ui:ui.checkstyle.rgno",
        "//engines/voide/src/java/voide/ui/elements:elements.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel:constants.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/engine:engine.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/entity:entity.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/factories/elements:elements.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/input:input.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/resources:resources.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/sound:sound.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/state:state.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/system:system.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/ui:ui_type.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/ui/controllers:controllers.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:debug_renderer.checkstyle.rgno",
        "//games/spaxel/src/java/spaxel/util:gl_util.checkstyle.rgno",
    ],
)
