workspace(
    name = "coffeegames",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

##########
# Skylib #
##########

http_archive(
    name = "bazel_skylib",
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

################
# JVM external #
################

RULES_JVM_EXTERNAL_TAG = "4.0"

RULES_JVM_EXTERNAL_SHA = "31701ad93dbfe544d597dbe62c9a1fdd76d81d8a9150c2bf1ecf928ecdf97169"

OPERATING_SYSTEM = "linux"  # TODO select statement

http_archive(
    name = "rules_jvm_external",
    sha256 = RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

#####################
# Spaxel Maven deps #
#####################

load("@rules_jvm_external//:defs.bzl", "maven_install")
load("@rules_jvm_external//:specs.bzl", "maven")

# FIXME temporary variables
LWJGL_VERSION = "3.2.1"

platform = "natives-%s" % OPERATING_SYSTEM

# TODO set java source 11 in toolchain
maven_install(
    artifacts = [
        # Jackson serialization
        "com.fasterxml.jackson.core:jackson-core:2.7.3",
        "com.fasterxml.jackson.core:jackson-annotations:2.7.3",
        "com.fasterxml.jackson.core:jackson-databind:2.7.3",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.7.3",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.3.0",
        # Junit
        "org.junit.jupiter:junit-jupiter-api:5.5.0",
        "org.junit.jupiter:junit-jupiter-engine:5.5.0",
        "org.junit.jupiter:junit-jupiter-params:5.5.0",
        "org.apiguardian:apiguardian-api:1.0.0",
        "org.opentest4j:opentest4j:1.1.1",
        "org.junit.platform:junit-platform-commons:1.5.0",
        "org.junit.platform:junit-platform-console:1.5.0",
        "org.junit.platform:junit-platform-engine:1.5.0",
        "org.junit.platform:junit-platform-launcher:1.5.0",
        "org.junit.platform:junit-platform-suite-api:1.5.0",
        # LWJGL
        "org.lwjgl:lwjgl:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-assimp:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-bgfx:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-egl:%s" % LWJGL_VERSION,
        "org.lwjgl:lwjgl-glfw:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-jawt:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-jemalloc:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-lmdb:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-nanovg:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-nfd:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-nuklear:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-openal:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-opencl:%s" % LWJGL_VERSION,
        "org.lwjgl:lwjgl-opengl:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-opengles:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-openvr:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-ovr:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-par:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-sse:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-stb:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-tinyexr:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-tinyfd:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-vulkan:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-xxhash:%s" % LWJGL_VERSION,
        #"org.lwjgl:lwjgl-yoga:%s" % LWJGL_VERSION,
        "org.lwjgl:lwjgl:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-assimp:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-bgfx:%s:%s" % (LWJGL_VERSION, platform),
        "org.lwjgl:lwjgl-glfw:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-jemalloc:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-lmdb:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-nanovg:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-nfd:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-nuklear:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-openal:%s:%s" % (LWJGL_VERSION, platform),
        "org.lwjgl:lwjgl-opengl:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-opengles:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-openvr:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-ovr:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-par:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-sse:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-stb:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-tinyexr:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-tinyfd:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-xxhash:%s:%s" % (LWJGL_VERSION, platform),
        #"org.lwjgl:lwjgl-yoga:%s:%s" % (LWJGL_VERSION, platform),
        maven.artifact(
            group = "org.lwjgl",
            artifact = "lwjgl",
            version = LWJGL_VERSION,
            classifier = platform,
        ),
        maven.artifact(
            group = "org.lwjgl",
            artifact = "lwjgl-glfw",
            version = LWJGL_VERSION,
            classifier = platform,
        ),
        maven.artifact(
            group = "org.lwjgl",
            artifact = "lwjgl-opengl",
            version = LWJGL_VERSION,
            classifier = platform,
        ),
    ],
    repositories = [
        # Private repositories are supported through HTTP Basic auth
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)

load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")
