load("@google_bazel_common//tools/maven:pom_file.bzl", "pom_file")
load("@rules_java//java:java_single_jar.bzl", "java_single_jar")

java_single_jar(
    name = "voide",
    deps = [
        "//engines/voide/src/java/voide/input",
        "//engines/voide/src/java/voide/resources",
        "//engines/voide/src/java/voide/ui",
"//engines/voide/src/java/voide/render",
    ],
)

pom_file(
    name = "voide_pom",
    targets = [
        ":voide",
    ],
    template_file = "pom.xml.template",
)
