load("//bazel:macros.bzl", "cg_java_binary", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_binary(
    name = "spaxel",
    srcs = ["Game.java"],
    deps = [
        ":display_runner",
        ":update_runner",
    ],
)

cg_java_binary(
    name = "spaxel_temp",
    srcs = glob(["**/*.java"]) + [
        "//games/spaxel/src/engine:files",
        "//games/spaxel/src/system:files",
        "//games/spaxel/src/entity:files",
        "//games/spaxel/src/factories/entities:files",
        "//games/spaxel/src/factories/elements:files",
        "//games/spaxel/src/ui/elements:files",
        "//games/spaxel/src/loaders:Loader.java",
        "//games/spaxel/src/util:DebugRenderer.java",
    ],
    main_class = "spaxel.Game",
    resource_jars = [
        "//games/spaxel/resources/java:resources",
    ],
    deps = [
        "//engines/voide/src/java/voide/collision",
        "//engines/voide/src/java/voide/graphics/geometry",
        "//engines/voide/src/java/voide/input",
        "//engines/voide/src/java/voide/math",
        "//engines/voide/src/java/voide/sound",
        "//games/spaxel/src/graphics/animation",
        "//games/spaxel/src/graphics/buffer:layer_fbo",
        "//games/spaxel/src/graphics/buffer:master_buffer",
        "//games/spaxel/src/graphics/buffer:render_buffer",
        "//games/spaxel/src/graphics/buffer:render_job",
        "//games/spaxel/src/graphics/buffer:render_layer",
        "//games/spaxel/src/graphics/postprocess",
        "//games/spaxel/src/graphics/shaders",
        "//games/spaxel/src/graphics/texture",
        "//games/spaxel/src/graphics/texture:color_box",
        "//games/spaxel/src/graphics/texture:packed_texture",
        "//games/spaxel/src/graphics/texture:renderable",
        "//games/spaxel/src/graphics/texture:texture_part",
        "//games/spaxel/src/logger",
        "//games/spaxel/src/sound:music_list",
        "//games/spaxel/src/ui/elements:ui_type",
        "//games/spaxel/src/ui/render",
        "//games/spaxel/src/ui/state",
        "//games/spaxel/src/ui/styles",
        "//games/spaxel/src/util:gl_util",
        "//games/spaxel/src/util:matrix_util",
        "//games/spaxel/src/util:spaxel_random",
        "//games/spaxel/src/util:sprite_data_util",
        "//games/spaxel/src/util:texture_util",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:org_lwjgl_lwjgl",
        "@maven//:org_lwjgl_lwjgl_glfw",
        "@maven//:org_lwjgl_lwjgl_glfw_natives_linux",
        "@maven//:org_lwjgl_lwjgl_natives_linux",
        "@maven//:org_lwjgl_lwjgl_opengl",
        "@maven//:org_lwjgl_lwjgl_opengl_natives_linux",
    ],
)

cg_java_library(
    name = "constants",
    srcs = ["Constants.java"],
)

cg_java_library(
    name = "display_runner",
    srcs = ["DisplayRunner.java"],
    deps = [":constants"],
)

cg_java_library(
    name = "update_runner",
    srcs = [
        "UpdateRunner.java",
    ],
    deps = [
        ":constants",
        "//games/spaxel/src/engine",
        "@maven//:org_lwjgl_lwjgl_glfw",
    ],
)
