package(default_visibility = ["//games/spaxel:__subpackages__"])

java_library(
    name = "resources",
    resource_jars = [
        "//games/spaxel/resources/java/ui",
        "//games/spaxel/resources/java/resources",
        "//games/spaxel/resources/java/shaders",
        "//games/spaxel/resources/java/spritesheets",
        "//games/spaxel/resources/java/keys",
        "//games/spaxel/resources/java/music",
        "//games/spaxel/resources/java/properties",
        "//games/spaxel/resources/java/loading",
        "//games/spaxel/resources/java/textures",
    ],
    resources = glob(["**"]),
)
