load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "postprocess",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/graphics/geometry",
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src:constants",
        "//games/spaxel/src/graphics/shaders",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)
