load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "shaders",
    srcs = glob(["*.java"]),
    deps = [
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src/util:shader_utils",
        "@maven//:org_lwjgl_lwjgl_opengl",
    ],
)
