load("//bazel:macros.bzl", "cg_java_library")

package(default_visibility = ["//games/spaxel:__subpackages__"])

cg_java_library(
    name = "packed_texture",
    srcs = ["PackedTexture.java"],
    deps = [
        ":renderable",
        ":texture",
        ":texture_node",
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src:constants",
        "//games/spaxel/src/graphics/buffer:render_job",
        "//games/spaxel/src/util:texture_util",
    ],
)

cg_java_library(
    name = "renderable",
    srcs = ["Renderable.java"],
    deps = [
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src/graphics/buffer:render_job",
    ],
)

cg_java_library(
    name = "texture",
    srcs = ["Texture.java"],
    deps = [
        ":renderable",
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src:constants",
        "//games/spaxel/src/graphics/buffer:render_job",
    ],
)

cg_java_library(
    name = "color_box",
    srcs = ["ColorBox.java"],
    deps = [
        ":renderable",
        "//engines/voide/src/java/voide/math",
        "//games/spaxel/src/graphics/buffer:render_job",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)

cg_java_library(
    name = "texture_part",
    srcs = ["TexturePart.java"],
    deps = [
        ":texture",
        "//engines/voide/src/java/voide/math",
    ],
)

cg_java_library(
    name = "texture_node",
    srcs = ["TextureNode.java"],
    deps = [
        ":texture",
        "//engines/voide/src/java/voide/math",
    ],
)
